reminder how to manipulate DOM and more things 2

--- a/06-reminder/index.html
+++ b/06-reminder/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
   <h1>reminder manipulation DOM and save local storage</h1>
-  
-
+  <input type="text" class="ipt">
+  <button class="btn-put">put</button>
+  <button class="btn-clean">clean</button>
+  <div class="lis"></div>
   <!-- JavaScript -->
   <script src="./index.js"></script>
 </body>
