--- a/16-promises-example/index.html
+++ b/16-promises-example/index.html
@@ -12,7 +12,7 @@
     </style>
   </head>
   <body>
-    <h1>Callback Hell</h1>
+    <h1>Promises</h1>
     <h2 class="first">hello world</h2>
     <h2 class="second">hello people</h2>
     <h2 class="third">hello javaScript</h2>
