nugget fetch api 1.2

--- a/18-Fetch-API/index.html
+++ b/18-Fetch-API/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
   </head>
   <body>
+    <h2>Fetch</h2>
     <!-- JavaScript -->
     <script src="./index.js"></script>
   </body>
