nugget fetch Erros 1.4

--- a/19-Fetch-Errors/index.html
+++ b/19-Fetch-Errors/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h2>Fetch Errors</h2>
+    <button class="btn">Fetch Tours</button>
     <!-- JavaScript -->
     <script src="./index.js"></script>
   </body>
